<resources>
    <string name="app_name">Sigemes App</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="beranda">Beranda</string>
    <string name="keranjang">Keranjang</string>
    <string name="riwayat">Riwayat</string>
    <string name="akun">Akun</string>
    <string name="password_too_short">Kata sandi terlalu pendek, harus lebih dari 8 karakter</string>
    <string name="name_too_short">Karakter nama terlalu pendek, harus lebih dari 2 karakter</string>
    <string name="phoneNum_too_short">Nomor handphone terlalu pendek, harus lebih dari 9 karakter</string>
    <string name="invalid_email">Email tidak valid, format: nama@domain.com</string>
    <string name="welcome">Selamat Datang!</string>
    <string name="please_login_with_your_information">Silahkan login dengan informasi anda</string>
    <string name="email_address">Alamat Email</string>
    <string name="password">Kata Sandi</string>
    <string name="login">Masuk</string>
    <string name="lupa_kata_sandi"><u>Lupa Kata Sandi?</u></string>
    <string name="logo_pemkot">Logo Pemkot</string>
    <string name="sudah_punya_akun">Sudah punya akun? <u>Silahkan Login</u></string>
    <string name="belum_punya_akun">Belum punya akun? <u>Silahkan Daftar</u></string>
    <string name="please_register_with_your_information">Silahkan daftar sesuai informasi anda</string>
    <string name="your_name">Nama Lengkap</string>
    <string name="register">Daftar</string>
    <string name="username">Username</string>
    <string name="nomor_handphone">Nomor Handphone</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="pilih_jenis_kelamin">Pilih Jenis Kelamin</string>
    <string name="email_empty_error">Alamat email tidak boleh kosong</string>
    <string name="change_password">Ubah Kata Sandi</string>
    <string name="new_password">Kata Sandi Baru</string>
    <string name="confirm_new_password">Konfirmasi Sandi Baru</string>
    <string name="submit">Simpan</string>
    <string name="batalkan">Batalkan</string>
    <string name="test_gmail_com">test@gmail.com</string>
    <string name="silahkan_masukkan_kode_yang_telah_kami_kirim">Silahkan masukkan kode yang telah kami kirim</string>
    <string name="otp_verification">Verifikasi Kode</string>
    <string name="resend_otp">Kirim ulang kode</string>
    <string name="deskripsi_forgotpw">Masukkan alamat email agar kami dapat mengirimkan kode</string>
    <string name="lupa_kata_sandi_title">Lupa Kata Sandi?</string>
    <string name="back_to_login">Kembali</string>
    <string name="back_to_otp">Kembali</string>
    <string name="otp_empty">Masukkan kode otp!</string>
    <string name="otp_verification_failed">Kode salah</string>
    <string name="otp_verified">Verifikasi berhasil</string>
    <string name="save_password">"Simpan Kata Sandi Baru "</string>
    <string name="save_password_success">Kata Sandi Baru Berhasil Tersimpan</string>
    <string name="save_password_failed">Kata Sandi Baru Tidak Berhasil Tersimpan</string>
    <string name="new_password_empty_error">Masukkan Kata Sandi Baru</string>
    <string name="old_password_empty_error">Masukkan Kata Sandi Lama</string>
    <string name="passwords_same_error">Kata Sandi Tidak Boleh Sama</string>
    <string name="old_and_new_password_empty">Masukkan Kata Sandi Lama dan Kata Sandi Baru</string>
    <string name="email_not_found">Email Tidak Ditemukan</string>
    <string name="otp_sent_success">OTP berhasil terkirim.</string>
    <string name="otp_sent_failed">OTP gagal terkirim.</string>
    <string name="send_otp">Kirim Kode</string>
    <string name="verify_otp">Verifikasi</string>
    <string name="kembali_ke_halaman_lupa_password">Kembali</string>
    <string name="email_pass_empty">Alamat email dan kata sandi tidak boleh kosong!</string>
    <string name="login_success">Login Berhasil!</string>
    <string name="login_failed">Login Gagal!</string>
    <string name="all_req">Semua field harus diisi!</string>
    <string name="verifikasi_email_anda">Verifikasi Email Anda</string>
    <string name="failed">Gagal</string>
    <string name="please_wait">Harap tunggu..</string>
    <string name="success">Berhasil!</string>
    <string name="register_success">Akun berhasil didaftarkan!</string>
    <string name="register_failed">Akun tidak berhasil didaftarkan..</string>
    <string name="sigemes">SiGEMES</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="title_1">Pesan penginapan atau gedung acara</string>
    <string name="title_2">Kelola reservasi dengan efektif</string>
    <string name="mess_menu">Mess Menu</string>
    <string name="mess">Mess\nPemko</string>
    <string name="mess_kota">Mess Pemko Padangsidimpuan</string>
    <string name="gedung_adam_malik">Gedung Adam Malik</string>
    <string name="available_room">Kamar Tersedia Hari Ini</string>
    <string name="urutkan">Urutkan</string>
    <string name="ulasan_count">(%1$d ulasan)</string>
    <string name="icon">Icon</string>
    <string name="king_size_bed">King size bed</string>
    <string name="price_range">Rp 70.000 – 120.000</string>
    <string name="pilih">Pilih</string>
    <string name="tidak_bisa_refund">Kamar ini tidak bisa refund</string>
    <string name="room_type">Kamar Standard 1</string>
    <string name="rating">8,1</string>
    <string name="user_fullname">User Fullname</string>
    <string name="user_domain_com">user@domain.com</string>
    <string name="lihat_profil_saya">Lihat Profil Saya</string>
    <string name="pusat_bantuan">Pusat Bantuan</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vel dui ac lorem luctus placerat. Integer euismod libero non eros volutpat, vitae fringilla velit fermentum. Proin volutpat, lorem non pellentesque pharetra, ex metus venenatis nulla, in tincidunt nulla eros id nulla. Sed id arcu urna.</string>
    <string name="hubungi_kami">Hubungi Kami</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="keluar">Keluar</string>
    <string name="text_mess">"Pesan penginapan di Mess Kota Padangsidimpuan"</string>
    <string name="text_gedung">Sewa penggunaan Gedung Adam Malik Kota Padangsidimpuan</string>
    <string name="photo">Photo</string>
    <string name="save">Simpan</string>
    <string name="one">1</string>
    <string name="guest">Tamu</string>
    <string name="room">Kamar</string>
    <string name="ulasan_rating">%1$d / 10</string>
    <string name="info_pemesanan_title">Informasi Pemesanan</string>
    <string name="info_pemesanan_kamar_title">Pemesanan Kamar</string>
    <string name="info_pemesanan_slot_title">Pemesanan Slot</string>
    <string name="info_pemesanan_kamar">Jika Anda memesan kamar, Anda akan membayar per kamar. Maksimal jumlah tamu untuk setiap kamar adalah 3 orang.</string>
    <string name="info_pemesanan_slot">Jika Anda memilih untuk memesan slot, Anda akan membayar per orang, bukan per kamar. Untuk sisa 2 tamu lainnya, akan dipilih secara acak dengan jenis kelamin yang sama. \n\nUntuk melakukan pemesanan slot, maka jumlah kamar adalah <u>0</u>.</string>
    <string name="selengkapnya">Selengkapnya</string>
    <string name="tentang_gedung">Tentang Gedung</string>
    <string name="ulasan_dari_tamu">Ulasan dari Tamu</string>
    <string name="selamat_pagi">Selamat Pagi</string>
    <string name="room_facilities">- King size bed\n- TV\n- AC</string>
    <string name="fasilitas_kamar_title">Fasilitas Kamar</string>
    <string name="refund_text">- Apabila kamar sudah dipesan dan dibayar kemudian pesanan dibatalkan, maka biaya pemesanan tidak dapat dikembalikan.</string>
    <string name="reschedule_text">- Apabila kamar sudah dipesan dan dibayar, maka jadwal pemesanan tidak dapat diganti.</string>
    <string name="mohon_diperhatikan">Mohon Diperhatikan:</string>
    <string name="available_slot_count">3 Tamu</string>
    <string name="available_slot_text">Slot Tersedia:</string>
    <string name="total_slot_count">3 Tamu</string>
    <string name="total_slot_title">Total Slot:</string>
    <string name="slot_tamu">Slot Tamu</string>
    <string name="rent_info">Informasi Terkait Pemesanan Kamar</string>
    <string name="checkout_kamar_ini">Checkout Kamar Ini</string>
    <string name="tambah_ke_keranjang">Tambah ke Keranjang</string>
    <string name="total_harga">Total Harga</string>
    <string name="_1_malam">1 malam</string>
    <string name="durasi_sewa_kamar">- Durasi sewa kamar:</string>
    <string name="umum">Umum</string>
    <string name="kategori_penyewa">- Kategori penyewa:</string>
    <string name="rincian">Mess Pemerintah Kota Padangsidimpuan, \nKamar VIP 1</string>
    <string name="rincian_title">Rincian Harga</string>
    <string name="fasilitas_kamar">Fasilitas Kamar</string>
    <string name="fasilitas_umum">Fasilitas Umum</string>
    <string name="fasilitas">Fasilitas</string>
    <string name="lokasi">Lokasi</string>
    <string name="kebijakan">Kebijakan</string>
    <string name="tentang">Tentang</string>
    <string name="waktu_check_in_dan_check_out">Waktu Check-in dan Check-out</string>
    <string name="dokumen_yang_diperlukan">Dokumen yang Diperlukan</string>
    <string name="kebijakan_properti">Kebijakan Properti</string>
    <string name="kebijakan_khusus">Kebijakan Khusus</string>
    <string name="refund_text_cityhall">- Apabila Gedung sudah dipesan dan sudah dibayar kemudian Anda membatalkan pesanan, maka biaya pemesanan tidak dapat dikembalikan.</string>
    <string name="reschedule_text_cityhall">- Apabila Gedung sudah dipesan dan sudah dibayar, maka Anda tidak dapat mengganti jadwal pemesanan.</string>
    <string name="cityhall_payment_info_text">- Penyewaan Gedung Adam Malik hanya dapat dilakukan untuk maksimal 2 minggu dari hari ini.</string>
    <string name="kebijakan_cityhall">- Kami mohon pengertiannya. Jika pada tanggal yang sama terdapat acara pemerintahan, pesanan Anda mungkin perlu dibatalkan atau dijadwalkan ulang sesuai ketentuan Peraturan Walikota.</string>
    <string name="kategori_acara">- Kategori Acara:</string>
    <string name="durasi_sewa_gedung">- Durasi sewa gedung:</string>
    <string name="_1_hari">1 hari</string>
    <string name="checkout_gedung_ini">Checkout Gedung Ini</string>
    <string name="edit_profil">Ubah Data Akun</string>
    <string name="durasi_sewa">- Durasi Sewa</string>
    <string name="tentang_mess_pemko">Tentang Mess Pemko</string>
    <string name="tentang_gedung_adam_malik">Tentang Gedung Adam Malik</string>
    <string name="kirim_email">Kirim Email</string>
    <string name="kirim_kode">Kirim Kode</string>
    <string name="no_rooms_available">Mohon maaf...\nTidak ada kamar mess yang tersedia.</string>
    <string name="cityhall_available">Gedung Adam Malik tersedia</string>
    <string name="no_cityhall_available">Mohon maaf...\nPada tanggal tersebut Gedung Adam Malik tidak tersedia.</string>
    <string name="check_in">Check-in</string>
    <string name="check_out">Check-out</string>
    <string name="desc_exit_dialog">Kamu masih dalam proses pembayaran. Kalau masih ragu, kamu bisa cek lagi detail pesanannya dulu yaa</string>
    <string name="cek_detail">Cek detail</string>
    <string name="keluar_halaman">Keluar halaman</string>
    <string name="desc_tutorial">💡 Di video ini, terdapat 4 tutorial:\n\n00:06 - Tutorial pemesanan mess\n01:34 - Tutorial pembatalan pemesanan mess \n02:03 - Tutorial pemesanan gedung Adam Malik\n02:54 - Tutorial pembatalan pemesanan gedung Adam Malik</string>
    <string name="title_tutorial">Selamat datang di tutorial penggunaan aplikasi SiGEMES! 🎉</string>
    <string name="warning_tutorial">*mohon diperhatikan bahwa pembatalan pemesanan hanya dapat dilakukan apabila belum melakukan pembayaran. Selamat menyaksikan. Terima kasih.</string>
</resources>