<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.android.sigemesapp.presentation.home.HomeFragment"
        android:label="@string/beranda"
        tools:layout="@layout/fragment_home" >
    </fragment>

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.android.sigemesapp.presentation.history.HistoryFragment"
        android:label="@string/riwayat"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.android.sigemesapp.presentation.account.AccountFragment"
        android:label="@string/akun"
        tools:layout="@layout/fragment_account" />

</navigation>