<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/forgot_password"
    android:background="@color/babyblue"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.auth.forgotPassword.ForgotPasswordActivity">

    <ImageView
        android:id="@+id/logo_pemkot"
        android:layout_width="169dp"
        android:layout_height="174dp"
        android:contentDescription="@string/logo_pemkot"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/card"
        android:src="@drawable/logo_pemkot"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        app:cardElevation="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        app:layout_constraintTop_toBottomOf="@id/logo_pemkot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp">

            <TextView
                android:id="@+id/welcome_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lupa_kata_sandi_title"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/welcome_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/deskripsi_forgotpw"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/email_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_address"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ed_login_email_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/email">

                <com.android.sigemesapp.presentation.customview.CustomEmailValid
                    android:id="@+id/ed_login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:minHeight="48dp"
                    android:inputType="textEmailAddress"
                    tools:ignore="SpeakableTextPresentCheck"/>
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSendOtp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/send_otp"
                app:cornerRadius="8dp" />

            <TextView
                android:id="@+id/backToLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/back_to_login"
                android:textStyle="bold"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck"
                android:focusable="true" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
