<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/babyblue"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.auth.register.EmailVerificationOtpActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="28dp">

            <TextView
                android:id="@+id/otp_verificaiton_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verifikasi_email_anda"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/otp_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/silahkan_masukkan_kode_yang_telah_kami_kirim" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/verifEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:text="@string/test_gmail_com"/>

            <com.chaos.view.PinView
                android:id="@+id/inputOtp"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="8dp"
                android:inputType="number"
                android:padding="10dp"
                android:textSize="18sp"
                app:itemCount="5"
                app:itemHeight="48dp"
                app:itemRadius="10dp"
                app:lineColor="@color/onGray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnVerifyOtp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/verify_otp"
                app:cornerRadius="8dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>