<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="380dp"
    android:id="@+id/loading_dialog"
    app:cardCornerRadius="16dp"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="match_parent"
        android:layout_width="380dp"
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/question_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="Apakah kamu mau keluar halaman?"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/TextBoldH5"/>

        <ImageView
            android:id="@+id/close_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="20dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/close"
            app:layout_constraintBottom_toBottomOf="@id/question_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/question_text"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/question_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/desc_exit_dialog"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/question_text"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/TextH6"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:backgroundTint="@color/softblue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/question_desc"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:paddingVertical="16dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/keluar_halaman"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/keluar_halaman"
                    style="@style/TextBoldH6"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/darkBlue"
                    android:textAllCaps="false"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginHorizontal="20dp"
                    app:cornerRadius="20dp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cek_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cek_detail"
                    style="@style/TextBoldH6"
                    android:textColor="@color/darkBlue"
                    android:backgroundTint="@color/babyblue"
                    android:textAllCaps="false"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/keluar_halaman"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginHorizontal="20dp"
                    app:cornerRadius="20dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
